# aws-sso-login

./: Cargo.toml
.github/workflows/: publish.yml
crates/aws-sso-login/: Cargo.toml
crates/aws-sso-login/src/: aws.rs  cli.rs  logging.rs  main.rs
crates/aws-sso-login/src/providers/: microsoft.rs  mod.rs
