[package]
name = "aws-sso-login"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
directories = "5.0"
env_logger = "0.11"
headless_chrome = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
tokio = { version = "1", features = ["full"] }
